--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "mon-template-react",
+  "name": "sts-library",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
+    "@radix-ui/react-dropdown-menu": "^2.1.6",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@types/react-router-dom": "^5.3.3",
